--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="backround"> 
   <mat-toolbar color="black" style="width: 100%;">
 
-    <img src= "assets/images/chess white.png" width="30" height="50">
+    <img src= "assets/images/chess.png" width="50" height="70">
 
     <span style="color: var(--main-light-color)"> Chess with friends</span>
     <span class="flexExpand" ></span>
