--- a/client/src/app/matchmaking/matchmaking.component.scss
+++ b/client/src/app/matchmaking/matchmaking.component.scss
@@ -11,3 +11,17 @@
 .full-width {
   width: 100%;
 }
+
+.backround {
+	/* The image used */
+	// background-image: url("https://wallpaperaccess.com/full/2003189.jpg");
+	/* Full height */
+	background-color: var(--main-light-color);
+	// height: 100%;
+	// width: 100%;
+	height: 100vh;
+	/* Center and scale the image nicely */
+	// background-position: center;
+	// background-repeat: no-repeat;
+	// background-size: cover;
+  }
