--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,1 +1,2 @@
 <p style="color: turquoise;">THIS IS HOME</p>
+<button pButton type="button" label="Matchmaikong" (click)="loadMatchmaking()" ></button>
