--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -3,7 +3,7 @@
 
   <div class="center">
     <div class="p-field p-grid">
-      <label for="email" class="p-col-fixed" >Email</label>
+      <label for="email" class="p-col-fixed" >Email or Username</label>
       <div class="p-col">
         <input class="filed" [(ngModel)]="email" id="email" type="text" pInputText>
       </div>
