--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -14,7 +14,8 @@
   /* The image used */
   // background-image: url("https://wallpaperaccess.com/full/2003189.jpg");
   /* Full height */
-  background-color: var(--main-light-color);
+  // background-color: var(--main-light-color);
+  background-color: #ECFFDC;
   // height: 100%;
   // width: 100%;
   /* Center and scale the image nicely */
