match history logic implemented - still needs to be ilustraited in the client

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -15,7 +15,7 @@
   // background-image: url("https://wallpaperaccess.com/full/2003189.jpg");
   /* Full height */
   // background-color: var(--main-light-color);
-  background-color: #ECFFDC;
+  background-color: #262626;
   // height: 100%;
   // width: 100%;
   /* Center and scale the image nicely */
