--- a/client/src/app/authentication/register/register.component.html
+++ b/client/src/app/authentication/register/register.component.html
@@ -39,12 +39,13 @@
       class="p-button-raised p-button center register">Register</button>
     </div>
 
-    <div class="flex">
+    <!-- <div class="flex">
       <button class="btn-block google-sign-in googlebtn" (click)="googleLogin()" mat-raised-button>
         <img [src]="'assets/images/google.svg'" alt="google"/>
         <span> Continue with Google</span>
       </button>
-    </div>
+    </div> -->
+
     <h3 style="margin-top: 30%; color: red;">{{message}}</h3>
   </div>
 </div>
