--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,18 +1,25 @@
-<div class="backround"> 
+<div class="backround">
   <mat-toolbar color="black" style="width: 100%;">
 
-    <img src= "assets/images/chess.png" width="50" height="70">
+    <span class="logodiv">
+      <img src="assets/images/chess.png" width="50" height="70" (click)="matchmaking()" style="cursor: pointer;">
+      <span class="logoname" (click)="matchmaking()"> Play Chess with friends</span>
+      <button *ngIf="isLogedin" (click)="matchHistory()" pButton type="button"
+        class="p-button-raised p-button center matchHistorybtn">Match history</button>
+    </span>
 
-    <span style="color: var(--main-light-color)"> Chess with friends</span>
-    <span class="flexExpand" ></span>
+    <span class="flexExpand"></span>
 
     <div fxFlex fxLayoutAlign="flex-end center" style="width: 600px; height: 70%;">
 
-      <button *ngIf="!isLogedin" (click)="register()" pButton type="button" class="p-button-raised p-button center register">Register</button>
+      <button *ngIf="!isLogedin" (click)="register()" pButton type="button"
+        class="p-button-raised p-button center register">Register</button>
 
-      <button *ngIf="!isLogedin" (click)="login()" pButton type="button" class="p-button-raised p-button center loginlbtn">Log in</button>
+      <button *ngIf="!isLogedin" (click)="login()" pButton type="button"
+        class="p-button-raised p-button center loginlbtn">Log in</button>
 
-      <button *ngIf="isLogedin" (click)="logout()" pButton type="button" class="p-button-raised p-button center logoutlbtn">Logout</button>
+      <button *ngIf="isLogedin" (click)="logout()" pButton type="button"
+        class="p-button-raised p-button center logoutlbtn">Logout</button>
     </div>
     <span class="example-spacer"></span>
   </mat-toolbar>
