--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -3,19 +3,24 @@
     --secondary-dark-color: #a35233;
     --main-light-color: #f6d2ac;
     --secondary-light-color: #d6834f;
+
+    --board-light: #f0d9b5;
+    --board-dark: #b58863;
   }
 
 ::ng-deep.mat-toolbar {
     
-    background-color: var(--main-dark-color);
+  background-color: var(--main-dark-color);
 }
-
+::ng-deep html {
+  background-color: #262626;
+}
+  
 .backround {
   /* The image used */
   // background-image: url("https://wallpaperaccess.com/full/2003189.jpg");
   /* Full height */
   // background-color: var(--main-light-color);
-  background-color: #262626;
   // height: 100%;
   // width: 100%;
   /* Center and scale the image nicely */
@@ -25,11 +30,11 @@
 }
 
 span{
-  margin: 15px;
+  // margin: 15px;
 }
 
-p-button {
-  margin-left: 8px;
+::ng-deep .p-button {
+  border: 0  !important;
 }
 
 .flexExpand {
@@ -42,56 +47,91 @@ p-button {
 
 .loginlbtn {
   margin-left: 2%;
-  color : var(--main-light-color);
-  background-color: var(--secondary-dark-color);
+  color : var(--board-light);
+  background-color: var(--board-dark);
   width: 100px;
 
 }
 
 .loginlbtn:not([disabled]):hover {
-  background-color: var(--main-light-color);
+  background-color: var(--board-light);
   color: var(--main-dark-color);
 }
 
-.loginlbtn[disabled] {
-  color : var(--main-dark-color);
-  background-color: var(--main-light-color);
-}
+// .loginlbtn[disabled] {
+//   color : var(--main-dark-color);
+//   background-color: var(--main-light-color);
+// }
 
 .register{
   width: 100px;
   margin-left: 65%;
-  background-color: var(--main-light-color);
+  background-color: var(--board-light);
   color : var(--main-dark-color);
 }
 
 .register:not([disabled]):hover{
-  background-color: var(--secondary-light-color);
-  color: var(--main-dark-color);
+  background-color: var(--board-dark);
+  color: var(--board-light);
 }
 
-.register[disabled]{
-  color : var(--main-dark-color);
-  background-color: var(--main-light-color);
-}
+// .register[disabled]{
+//   color : var(--board-dark);
+//   background-color: var(--main-light-color);
+// }
 
 .logoutlbtn {
-  margin-left: 85%;
+  margin-left: 80%;
   text-align: center;
-  color : var(--main-light-color);
+  color : var(--board-light);
   background-color: var(--secondary-dark-color);
   width: 20%;
-
 }
 
 .logoutlbtn:not([disabled]):hover {
-  background-color: var(--main-light-color);
+  background-color: var(--board-light);
   color: var(--main-dark-color);
 }
 
 .logoutlbtn[disabled] {
   color : var(--main-dark-color);
+  background-color: var(--board-light);
+}
+
+.matchHistorybtn{
+  margin-left: 20px;
+  text-align: center;
+  color : var(--main-light-color);
+  background-color: var(--board-dark);
+  // width: 20%;
+  height: 50%;
+}
+
+.matchHistorybtn:not([disabled]):hover {
+  background-color: var(--board-light);
+  color: var(--main-dark-color);
+}
+
+.matchHistorybtn[disabled] {
+  color : var(--main-dark-color);
   background-color: var(--main-light-color);
+}
+
+.logodiv{
+  display:flex;
+  align-items: center;
+}
+
+.logoname{
+color: var(--main-light-color); 
+cursor: pointer;
+padding: 3px;
+// border-right:2px solid var(--board-light);
+// border-bottom:2px solid var(--board-light);
+
+// border-left:2px solid var(--board-light);
+// border-top:2px solid var(--board-light);
+
 }
 
 /* Extra small devices (phones, 600px and down) /
