--- a/client/src/app/authentication/password-reset/password-reset.component.scss
+++ b/client/src/app/authentication/password-reset/password-reset.component.scss
@@ -28,11 +28,7 @@ label{
   padding: 10em;
   border-radius: 25px;
   max-width: 50rem;
-  background: linear-gradient(
-    250deg,
-    var(--secondary-light-color),
-    var(--secondary-dark-color) 80%,
-  );
+  background: linear-gradient(250deg, var(--main-dark-color), var(--secondary-dark-color) 80%);
 }
 
 .center {
@@ -44,7 +40,6 @@ label{
 .savePassword{
   color : var(--main-light-color);
   background-color: var(--secondary-dark-color);
-  width: 50%;
   margin-bottom: 5%;
 }
 
