--- a/client/src/app/authentication/send-password-reset/send-password-reset.component.html
+++ b/client/src/app/authentication/send-password-reset/send-password-reset.component.html
@@ -3,7 +3,7 @@
 
   <div class="center">
     <div class="p-field p-grid">
-      <label for="email" class="p-col-fixed" style="margin-bottom: 30px;">We will send you an email to reset your password</label>
+      <label for="email" class="p-col-fixed" style="margin-bottom: 50px; font-size: 25px;">We will send you an email to reset your password</label>
     
       <div class="p-col">
         <input class="filed" [(ngModel)]="email" id="email" type="text" pInputText>
