--- a/client/src/app/game/matchmaking/matchmaking.component.html
+++ b/client/src/app/game/matchmaking/matchmaking.component.html
@@ -1,7 +1,7 @@
-<div class="form">
-    <p>Angular2 client with Java Spring server with Web Sockets.</p>
-    <p>Just click play and share the link with whoever you wanna play with.</p>
+<div class="matchmaking-fields">
+    <p>Just click play and share the link with whoever you want to play with.</p>
     <p>If more people open the link they will be able to watch the match.<p>
-    <button md-raised-button (click)="play()">PLAY</button>
+      <button (click)="play()" pButton type="button"
+      class="p-button-raised p-button center playbtn">Play</button>
   </div>
   
