--- a/client/src/app/authentication/login/login.component.scss
+++ b/client/src/app/authentication/login/login.component.scss
@@ -1,4 +1,3 @@
-
 .flex {
   display: flex;
 }
@@ -17,7 +16,7 @@
   width: 80%;
 }
 
-label{
+label {
   margin-top: 8px;
   color: var(--main-light-color);
   display: block;
@@ -25,17 +24,16 @@ label{
   font-size: 20px;
 }
 
-.filed{
+.filed {
   width: 100%;
 }
 
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus, 
-input:-webkit-autofill:active{
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
   box-shadow: 0 0 0 30px rgba(90, 90, 90, 0.253) inset !important;
 }
-
 
 .loginFields {
   margin: auto;
@@ -43,11 +41,7 @@ input:-webkit-autofill:active{
   padding: 10em;
   border-radius: 25px;
   max-width: 50rem;
-  background: linear-gradient(
-    250deg,
-    var(--main-dark-color),
-    var(--secondary-dark-color) 80%,
-  );
+  background: linear-gradient(250deg, var(--main-dark-color), var(--secondary-dark-color) 80%);
 }
 
 // @media only screen and (max-width: 830) {
@@ -61,7 +55,12 @@ input:-webkit-autofill:active{
 .forgottenPasswordButton {
   border: transparent;
   background-color: transparent;
-  color: var(--main-light-color)
+  color: var(--main-light-color);
+  font-size: 17px;
+}
+
+.forgottenPasswordButton:hover{
+  color: var(--board-dark);
 }
 
 .full-width {
@@ -73,55 +72,45 @@ form {
 }
 
 .googlebtn {
-    width: 50%;
-    margin: auto;
-    background-color: var(--secondary-dark-color);
-    color: var(--main-light-color);;
-    margin-bottom: 5%;
-  }
-
-  .googlebtn:not([disabled]):hover{
-    background-color: var(--main-light-color);
-    color: var(--secondary-dark-color);
-  }
-
-  .googlebtn[disabled]{
-    color : var(--main-light-color);
-    background-color: var(--main-dark-color);
-  }
-
-  .register{
-    width: 30%;
-    background-color: var(--board-light);
-    margin-bottom: 5%;
-    margin-right: 20%;
-    color : var(--main-dark-color);
+  width: 50%;
+  margin: auto;
+  background-color: var(--secondary-dark-color);
+  color: var(--main-light-color);
+  margin-bottom: 5%;
 }
 
-.register:not([disabled]):hover{
-    background-color: var(--board-dark);
-    color: var(--board-light);
+.googlebtn:not([disabled]):hover {
+  background-color: var(--main-light-color);
+  color: var(--secondary-dark-color);
 }
 
-.register[disabled]{
-    color : var(--main-dark-color);
-    background-color: var(--main-light-color);
+.googlebtn[disabled] {
+  color: var(--main-light-color);
+  background-color: var(--main-dark-color);
 }
-  
+
+.register {
+  width: 30%;
+  background-color: var(--board-light);
+  margin-bottom: 5%;
+  margin-right: 20%;
+  color: var(--main-dark-color);
+}
+
+.register:not([disabled]):hover {
+  background-color: var(--board-dark);
+  color: var(--board-light);
+}
+
 .loginlbtn {
-    color : var(--board-light);
-    background-color: var(--board-dark);
-    width: 30%;
-    margin-bottom: 5%;
-    margin-left: 20%;
-  }
-  
-  .loginlbtn:not([disabled]):hover {
-    background-color: var(--board-light);
-    color: var(--main-dark-color);
-  }
-  
-  .loginlbtn[disabled] {
-    color : var(--main-dark-color);
-    background-color: var(--main-light-color);
-  }
+  color: var(--board-light);
+  background-color: var(--board-dark);
+  width: 30%;
+  margin-bottom: 5%;
+  margin-left: 20%;
+}
+
+.loginlbtn:not([disabled]):hover {
+  background-color: var(--board-light);
+  color: var(--main-dark-color);
+}
