--- a/client/src/app/authentication/send-password-reset/send-password-reset.component.scss
+++ b/client/src/app/authentication/send-password-reset/send-password-reset.component.scss
@@ -4,17 +4,12 @@
     padding: 10em;
     border-radius: 25px;
     max-width: 50rem;
-    background: linear-gradient(
-      250deg,
-      var(--secondary-light-color),
-      var(--secondary-dark-color) 80%,
-    );
+    background: linear-gradient(250deg, var(--main-dark-color), var(--secondary-dark-color) 80%);
   }
 
   .sendBtn{
-    color : var(--main-light-color);
-    background-color: var(--secondary-dark-color);
-    width: 30%;
+    background-color: var(--board-light);
+    color : var(--main-dark-color);
     margin-top: 5%;
     margin-bottom: 5%;
     margin-left: 30%;
@@ -22,15 +17,9 @@
   }
 
   .sendBtn:not([disabled]):hover {
-    background-color: var(--main-light-color);
-    color: var(--main-dark-color);
+    background-color: var(--board-dark);
+    color: var(--board-light);
   }
-  
-  .sendBtn[disabled] {
-    color : var(--main-dark-color);
-    background-color: var(--main-light-color);
-  }
-  
   
   .center {
     display: block;
