Last version: - Added filed errors

--- a/client/src/app/authentication/login/login.component.html
+++ b/client/src/app/authentication/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="loginFields">
-  <p-toast position="top-right"></p-toast>
+  <p-toast position="top-right" key="login"></p-toast>
 
   <div class="center">
     <div class="p-field p-grid">
