--- a/client/src/app/authentication/password-reset/password-reset.component.html
+++ b/client/src/app/authentication/password-reset/password-reset.component.html
@@ -1,4 +1,5 @@
 <div class="fields">
+  <p-toast position="top-right" key="password"></p-toast>
 
   <div class="center">
     <h1 class="center" style=" margin-bottom: 30%; color: var(--main-light-color);">Reset your password</h1>
@@ -11,7 +12,7 @@
     </div>
 
     <div class="p-field p-grid" style="padding-bottom: 20px;">
-      <label for="Username" class="p-col-fixed" >Confirm password</label>
+      <label class="p-col-fixed" >Confirm password</label>
         <div class="p-col">
           <p-password [(ngModel)]="passwordConfirm" [toggleMask]="true" [feedback]="false"></p-password>
         </div>
