--- a/client/src/app/authentication/send-password-reset/send-password-reset.component.html
+++ b/client/src/app/authentication/send-password-reset/send-password-reset.component.html
@@ -1,5 +1,6 @@
 <p-toast position="top-right"></p-toast>
 <div class="fields">
+  <p-toast position="top-right" key="email"></p-toast>
 
   <div class="center">
     <div class="p-field p-grid">
